fix: 🐛 resolve an issue where `Download CSV` button was not showing on `student-profile`

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss' prefix(tw) source(none);
+@import 'tailwindcss' prefix(tw) source(none) important;
 @source '../entrypoints/*.content.ts';
 @source '../utils/elements.ts';
 
